# cv-opus-hackathon

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  SKILL.md  benchmark.py  cli.py  install.sh  pyproject.toml  requirements.txt  run.py  run_staged.py
docs/: ARCHITECTURE.md  PROTOCOL.md
examples/: drone-build.json  prompts.md
frontend/src/: App.tsx
frontend/src/lib/: api.ts
schemas/: a2a-envelope.json  build-request.json  build-response.json
src/: __init__.py  config.py  types.py  validators.py
src/agents/: orchestrator.py  parts_agent.py
src/agents/assembler/: assembly_agent.py
src/agents/cad/: cad_agent.py
src/agents/pcb/: pcb_agent.py
src/agents/quoter/: quoter_agent.py
src/api/: server.py
src/db/: schema.py
src/scraper/: robu_scraper.py  wayback_scraper.py
tests/: test_api.py  test_pipeline.py  test_validators.py
