[project]
name = "cv-opus-hackathon"
version = "1.0.0"
description = "Multi-agent hardware builder with Opus 4.6 — prompt to BOM, PCB, CAD, assembly guide"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Joshua Jerin"}
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = "test_*.py"
python_classes = "Test*"

[tool.pyright]
include = ["src"]
venvPath = "."
reportMissingImports = false
reportMissingModuleSource = false
pythonVersion = "3.12"
